demo-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-pod
spec:
  containers:
    - name: container name
      image: image name
      ports:
        - containerPort: 80
