probes.yaml
apiVersion: v1
kind: Pod
metadata:
  name: first-pod
spec:
  containers:
    - name: first-container
      image: nginx:latest
  
  livenessProbe: 
      initialDelaySeconds: 15
      periodSeconds: 10
  
  readinessProbe: 
      initialDelaySeconds: 15
      periodSeconds: 10

  startupProbe: 
      failureThreshold: 30
      periodSeconds: 10
