secret-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: first-pod
spec:
  containers:
    - name: first-container
      image: nginx:latest
