simple-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-demo
spec:
  serviceAccountName: arun-svc
  containers:
    - name: first-container
      image: arunawsdevops/blue-app:latest
