demo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app
spec:
  type: NodePort
  selector:
    name: my-app
  ports:
    - nodePort: 30010
      port: 80
      targetPort: 80
